# rust-xpx-chain-sdk

./: Cargo.toml  README.md
api/: Cargo.toml
api/src/: error.rs  internally.rs  request.rs  sirius_client.rs
api/src/dtos/: account_dto.rs  address_dto.rs  aggregate_transaction_dto.rs  alias_dto.rs  balance_change_receipt_dto.rs  block_dto.rs  blockchain_dto.rs  cosignature_dto.rs  exchange_dto.rs  merkle_dto.rs  metadata_dto.rs  mod.rs  mosaic_dto.rs  multisig_dto.rs  namespace_dto.rs  network_config_dto.rs  network_type_dto.rs  node_dto.rs  resolution_dto.rs  secret_lock_dto.rs  secret_proof_dto.rs  source_dto.rs  transaction_dto.rs  uint_64_dto.rs
api/src/routes/: account_routes_api.rs  block_routes_api.rs  chain_routes_api.rs  const_routes.rs  exchange_routes_api.rs  mod.rs  mosaic_routes_api.rs  namespace_routes_api.rs  node_routes_api.rs  transaction_routes_api.rs
apis/: Cargo.toml
apis/examples/: add_exchange_offer.rs  api_announce_cosignature.rs  api_announce_modify_multisig_account_complete.rs  api_announce_mosaic_definition.rs  api_announce_register_namespace.rs  api_block.rs  api_chain.rs  api_exchange.rs  api_mosaic.rs  api_namespace.rs  api_node.rs  api_transactions.rs
apis/src/: account_routes_api.rs  block_routes_api.rs  chain_routes_api.rs  error.rs  exchange_routes_api.rs  internally.rs  lib.rs  mosaic_routes_api.rs  namespace_routes_api.rs  node_routes_api.rs  request.rs  sirius_client.rs  transaction_routes_api.rs
apis/src/dtos/: account_dto.rs  address_dto.rs  aggregate_transaction_dto.rs  alias_dto.rs  artifact_expiry_receipt_dto.rs  balance_change_receipt_dto.rs  block_dto.rs  blockchain_dto.rs  config_dto.rs  contract_dto.rs  cosignature_dto.rs  exchange_dto.rs  field_dto.rs  merkle_dto.rs  message_dto.rs  metadata_dto.rs  mod.rs  mosaic_dto.rs  multisig_dto.rs  namespace_dto.rs  network_config_dto.rs  network_type_dto.rs  node_dto.rs  receipt_dto.rs  resolution_dto.rs  secret_lock_dto.rs  secret_proof_dto.rs  server_dto.rs  source_dto.rs  statements_dto.rs  transaction_dto.rs  uint_64_dto.rs  upgrade_dto.rs  verifiable_entity_dto.rs
apis/src/routes/: account_routes_api.rs  block_routes_api.rs  chain_routes_api.rs  const_routes.rs  exchange_routes_api.rs  mod.rs  mosaic_routes_api.rs  namespace_routes_api.rs  node_routes_api.rs  transaction_routes_api.rs
crypto/: Cargo.toml  README.md
crypto/examples/: account.rs  main.rs
crypto/src/: constants.rs  ecdhe.rs  ed25519.rs  errors.rs  lib.rs  public.rs  secret.rs  signature.rs
examples/: Cargo.toml  accounts.rs  api_account.rs  api_announce_address_alias.rs  api_announce_aggregate_bonded.rs  api_announce_aggregate_complete.rs  api_announce_cosignature.rs  api_announce_create_mosaic_aggregate_complete.rs  api_announce_lock_funds.rs  api_announce_modify_multisig_account.rs  api_announce_modify_multisig_account_bonded.rs  api_announce_modify_multisig_account_complete.rs  api_announce_mosaic_alias.rs  api_announce_mosaic_definition.rs  api_announce_mosaic_supply_change.rs  api_announce_register_namespace.rs  api_announce_transfer.rs  api_block.rs  api_chain.rs  api_cosignature.rs  api_mosaic.rs  api_namespace.rs  api_node.rs  api_transaction_announce_mosaic_definition.rs  api_transaction_announce_transfer.rs  api_transactions.rs  example_account.rs  example_announce_aggregate_complete_transaction.rs  example_announce_create_multisig_account_transaction.rs  example_announce_metadata_account_transaction.rs  example_announce_metadata_mosaic_transaction.rs  example_announce_metadata_namespace_transaction.rs  example_announce_mosaic_definition.rs  example_announce_mosaic_supply_change.rs  example_announce_register_root_namespace.rs  example_announce_register_sub_namespace.rs  example_announce_transfer_transaction.rs  example_api_account.rs  example_api_chain.rs  example_api_metadat_v2.rs  (+11 more)
examples/api/: api_account.rs  api_block.rs  api_chain.rs  api_exchange.rs  api_mosaic.rs  api_namespace.rs  api_node.rs  api_transactions.rs  prueba.rs
examples/api/annunce/: account_properties_address.rs  account_properties_entity_type.rs  account_properties_mosaic.rs  address_alias.rs  aggregate_bonded.rs  aggregate_complete.rs  cosignature.rs  create_mosaic_aggregate_complete.rs  lock_funds.rs  modify_multisig_account_bonded.rs  modify_multisig_account_complete.rs  mosaic_alias.rs  mosaic_definition.rs  mosaic_supply_change.rs  register_namespace.rs  transfer.rs
examples/apis/: Cargo.toml  api_account.rs  api_block.rs  api_chain.rs  api_exchange.rs  api_mosaic.rs  api_namespace.rs  api_node.rs  api_transactions.rs
examples/apis/annunce/: add_exchange_offer.rs  address_alias.rs  aggregate_bonded.rs  aggregate_complete.rs  cosignature.rs  create_mosaic_aggregate_complete.rs  lock_funds.rs  modify_multisig_account_bonded.rs  modify_multisig_account_complete.rs  mosaic_alias.rs  mosaic_definition.rs  mosaic_supply_change.rs  register_namespace.rs  transfer.rs
examples/apis/examples/: add_exchange_offer.rs  api_account.rs  api_announce_address_alias.rs  api_announce_aggregate_bonded.rs  api_announce_aggregate_complete.rs  api_announce_cosignature.rs  api_announce_create_mosaic_aggregate_complete.rs  api_announce_lock_funds.rs  api_announce_modify_multisig_account_bonded.rs  api_announce_modify_multisig_account_complete.rs  api_announce_mosaic_alias.rs  api_announce_mosaic_definition.rs  api_announce_mosaic_supply_change.rs  api_announce_register_namespace.rs  api_announce_transfer.rs  api_block.rs  api_chain.rs  api_exchange.rs  api_mosaic.rs  api_namespace.rs  api_node.rs  api_transactions.rs
examples/crypto/: Cargo.toml  main.rs
examples/crypto/examples/: main.rs
examples/sdk/: Cargo.toml  accounts.rs  messages.rs  mosaics.rs
examples/websocket/: main.rs
sdk/: Cargo.toml
sdk/src/: lib.rs
sdk/src/models/: mod.rs  (+7 more)
utils/: Cargo.toml
utils/src/: lib.rs  utils_bytes.rs  utils_hex.rs
websocket/: Cargo.toml
websocket/src/: block.rs  client.rs  confirmed.rs  cosignature.rs  error.rs  lib.rs  model.rs  partial.rs  status.rs  transaction_confirmed.rs  transaction_unconfirmed.rs  unconfirmed.rs
(+650 files in other folders)
