[package]
name = "xpx-chain-sdk"
version = "0.5.0"
readme = "README.md"
license = "Apache-2.0"
authors = ["ProxymaX Core Development Team","Eleazar Garrido <eleazartovar123@gmail.com>"]

homepage = "https://www.proximax.io"
repository = "https://github.com/proximax-storage/rust-xpx-chain-sdk"
documentation = "https://github.com/proximax-storage/rust-xpx-chain-sdk/wiki"
keywords = ["blockchain", "sdk"]
categories = ["sdk"]
exclude = [ ".gitignore" ]
edition = "2018"

[lib]
name = "xpx_chain_sdk"
crate-type = ["lib"]

[dependencies]
xpx-chain-crypto = { git = "https://github.com/proximax-storage/rust-xpx-crypto" }

[dependencies.regex]
version = "^1"

[dependencies.byteorder]
version = "^1"

[dependencies.chrono]
version = "^0.4"

[dependencies.base32]
version = "^0.4"

[dependencies.ripemd160]
version = "^0.8"

[dependencies.sha3]
version = "^0.8"
default-features = false

[dependencies.flatbuffers]
version = "^0.6"

[dependencies.downcast-rs]
version = "^1.2"

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dependencies.serde_repr]
version = "^0.1"

[dependencies.serde_json]
version = "^1.0"

[dependencies.erased-serde]
version = "^0.3"

[dependencies.rand]
version = "0.7"
default-features = false

[dependencies.failure]
version = "0.1"

[dependencies.typetag]
version = "^0.1"

[dependencies.hex]
version = "^0.4"

[dependencies.bytes]
version = "^1.0"

[dependencies.reqwest]
version = "0.11"
default-features = false

[dependencies.tokio]
version = "^1.5"
features = ["full"]

[dependencies.tokio-tungstenite]
version = "^0.14"

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["async-await", "sink", "std"]

[dependencies.url]
version = "2.0"

[dev-dependencies]
tokio = { version = "1.5", features = ["full"] }
