[package]
name = "xpx-chain-sdk"
version = "0.5.6"
readme = "README.md"
license = "Apache-2.0"
authors = ["ProxymaX Core Development Team", "Eleazar Garrido <eleazartovar123@gmail.com>"]

homepage = "https://www.proximax.io"
repository = "https://github.com/proximax-storage/rust-xpx-chain-sdk"
documentation = "https://github.com/proximax-storage/rust-xpx-chain-sdk/wiki"
keywords = ["blockchain", "sdk"]
categories = ["sdk"]
exclude = [".gitignore"]
edition = "2021"
rust-version = "1.72.1"

[lib]
name = "xpx_chain_sdk"
crate-type = ["lib"]

[dependencies]
xpx-chain-crypto = { git = "https://github.com/proximax-storage/rust-xpx-crypto", features = ["serde"] }

[dependencies.anyhow]
version = "^1"

[dependencies.thiserror]
version = "^1.0"

[dependencies.fixed-hash]
version = "^0.8"

[dependencies.regex]
version = "^1"

[dependencies.byteorder]
version = "^1"

[dependencies.chrono]
version = "^0.4"

[dependencies.base32]
version = "^0.4"

[dependencies.flatbuffers]
version = "23.5"

[dependencies.num_enum]
version = "^0.6"
features = ["default"]

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dependencies.serde_repr]
version = "^0.1"

[dependencies.serde_json]
version = "^1.0"

[dependencies.erased-serde]
version = "^0.3"

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.ripemd]
version = "^0.1"

[dependencies.sha3]
version = "^0.10"
default-features = false

[dependencies.typetag]
version = "0.2"

[dependencies.hex]
version = "^0.4"

[dependencies.bytes]
version = "^1.4"

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["async-await", "sink", "std"]

[dependencies.pin-project]
version = "1.0"

[dependencies.tokio]
version = "^1"
features = ["rt"]
default_features = false

[dependencies.tokio-rustls]
version = "0.24"

[dependencies.tower]
version = "^0.4"
features = ["retry", "limit", "util", "timeout", "reconnect"]

[dependencies.hyper]
version = "0.14"
features = ["http1", "client", "tcp"]

[dependencies.hyper-timeout]
version = "0.4"

[dependencies.webpki-roots]
version = "0.22"

[dependencies.percent-encoding]
version = "2.2"

[dependencies.tracing]
version = "0.1"

[dependencies.derive_builder]
version = "0.12"

[dependencies.serde_qs]
version = "0.12"

[dependencies.strum]
version = "0.25"
features = ["derive"]

[dependencies.parking_lot]
version = "0.12"

[dependencies.proptest-derive]
optional = true
version = "0.4"

[dependencies.proptest]
optional = true
version = "1.3"

[features]
default = ["account", "namespace", "mosaic", "transaction"]
account = []
namespace = []
mosaic = []
transaction = []
proptest-support = ["proptest-derive", "proptest"]

[dev-dependencies]
proptest = "1.3"
proptest-derive = "0.4"
lazy_static = "^1.4"
tokio-test = "^0.4"
tokio = { version = "^1", features = ["full"] }
quickcheck = "1.0"
quickcheck_macros = "1.0"

[profile.test]
opt-level = 2

[profile.test.package."*"]
opt-level = 3