[package]
name = "xpx-chain-api"
version = "0.1.3"
readme = "README.md"
license = "Apache-2.0"
authors = ["ProxymaX Core Development Team","Eleazar Garrido <eleazartovar123@gmail.com>"]

homepage = "https://www.proximax.io"
repository = "https://github.com/proximax-storage/rust-xpx-chain-sdk/api"
documentation = "https://github.com/proximax-storage/rust-xpx-chain-sdk/wiki"
keywords = ["blockchain", "sdk", "api"]
categories = ["api"]
exclude = [ ".gitignore" ]
edition = "2018"

[lib]
name = "xpx_chain_api"
crate-type = ["lib"]

[dependencies]
xpx-chain-sdk = { path = "../sdk", version = "^0.1" }
xpx-chain-utils = { path = "../utils" }

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dependencies.serde_json]
version = "^1.0"

[dependencies.typetag]
version = "^0.1"

[dependencies.hex]
version = "^0.3"

[dependencies.bytes]
version = "^0.5"

[dependencies.reqwest]
version = "^0.10"

[dependencies.tokio]
version = "^0.2"
features = ["macros"]

[dependencies.failure]
version = "0.1"