[package]
name = "xpx-chain-apis"
version = "0.1.0"
readme = "README.md"
license = "Apache-2.0"
authors = ["ProxymaX Core Development Team","Eleazar Garrido <eleazartovar123@gmail.com>"]

homepage = "https://www.proximax.io"
repository = "https://github.com/proximax-storage/rust-xpx-chain-sdk/apis"
documentation = "https://github.com/proximax-storage/rust-xpx-chain-sdk/wiki"
keywords = ["blockchain", "sdk", "api"]
categories = ["api"]
exclude = [ ".gitignore" ]
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

xpx-chain-sdk = { path = "../sdk", version = "0.1.0" }
xpx-chain-utils = { path = "../utils" }

hex = "^0.3"

url = "2.1"
hyper = "0.13"
tokio = { version = "0.2", features = ["macros"] }
typetag = "0.1"

[dependencies.failure]
version = "0.1"