[package]
name = "xpx-chain-crypto"
version = "0.1.3"
authors = ["ProxymaX Core Development Team","Eleazar Garrido <eleazartovar123@gmail.com>"]
edition = '2018'
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/proximax-storage/rust-xpx-chain-sdk/crypto"
homepage = "https://proximax.io"
keywords = ["cryptography", "ed25519", "curve25519", "signature"]
categories = ["cryptography"]
description = "Fast and efficient ed25519 EdDSA key generations, signing, and verification in pure Rust."
exclude = [ ".git" ]
publish = false

[lib]
name = "xpx_chain_crypto"
crate-type = ["lib"]

[dependencies.curve25519-dalek]
version = "1"
default-features = false

[dependencies.rand]
version = "0.6"
features = ["i128_support"]

[dependencies.serde]
version = "^1.0.104"
optional = true

[dependencies.sha3]
version = "^0.8"
default-features = false

[dependencies.failure]
version = "^0.1.1"
default-features = false

[dependencies.clear_on_drop]
version = "0.2"

[dependencies.aes-soft]
version = "^0.3.2"

[dependencies.block-modes]
version = "^0.3.2"

[dev-dependencies]
base32 = "0.4.0"
ripemd160 = "0.8.0"
hex = "^0.3"
bincode = "^0.9"
criterion = "0.2"

[features]
default = ["std", "u64_backend"]
std = ["curve25519-dalek/std", "rand/std", "sha3/std"]
alloc = ["curve25519-dalek/alloc"]
nightly = ["curve25519-dalek/nightly", "rand/nightly", "clear_on_drop/nightly"]
yolocrypto = ["curve25519-dalek/yolocrypto"]
u64_backend = ["curve25519-dalek/u64_backend"]
u32_backend = ["curve25519-dalek/u32_backend"]
avx2_backend = ["curve25519-dalek/avx2_backend"]
