[package]
name = "xpx-chain-examples"
version = "0.1.4"
authors = ["ProxymaX Core Development Team","Eleazar Garrido <eleazartovar123@gmail.com>"]

homepage = "https://www.proximax.io"
repository = "https://github.com/proximax-storage/rust-xpx-chain-sdk/examples"
documentation = "https://github.com/proximax-storage/rust-xpx-chain-sdk/wiki"
keywords = ["blockchain", "sirius", "sdk", "crypto", "api", "example"]
categories = ["examples"]
exclude = [ ".gitignore" ]
edition = "2018"
publish = false

[dependencies]
xpx-chain-api = { path = "../api", version = "0.1" }
xpx-chain-crypto = { path = "../crypto", version = "0.1" }
xpx-chain-sdk = { path = "../sdk", version = "0.1" }
xpx-chain-websocket = { path = "../websocket", version = "0.1" }

futures = "0.3"

tokio = { version = "0.2", default-features = false, features = ["io-util"] }

failure = "0.1"

hex = "^0.3"

[[example]]
name = "varios"
path = "sdk/varios.rs"

[[example]]
name = "crypto"
path = "crypto/main.rs"

[[example]]
name = "accounts"
path = "sdk/accounts.rs"

[[example]]
name = "messages"
path = "sdk/messages.rs"

[[example]]
name = "mosaics"
path = "sdk/mosaics.rs"

[[example]]
name = "api_account"
path = "api/api_account.rs"

[[example]]
name = "api_block"
path = "api/api_block.rs"

[[example]]
name = "api_chain"
path = "api/api_chain.rs"

[[example]]
name = "api_exchange"
path = "api/api_exchange.rs"

[[example]]
name = "api_mosaic"
path = "api/api_mosaic.rs"

[[example]]
name = "api_namespace"
path = "api/api_namespace.rs"

[[example]]
name = "api_node"
path = "api/api_node.rs"

[[example]]
name = "api_transactions"
path = "api/api_transactions.rs"

[[example]]
name = "annunce_add_exchange_offer"
path = "api/annunce/add_exchange_offer.rs"

[[example]]
name = "annunce_address_alias"
path = "api/annunce/address_alias.rs"

[[example]]
name = "annunce_aggregate_bonded"
path = "api/annunce/aggregate_bonded.rs"

[[example]]
name = "annunce_aggregate_complete"
path = "api/annunce/aggregate_complete.rs"

[[example]]
name = "annunce_cosignature"
path = "api/annunce/cosignature.rs"

[[example]]
name = "annunce_create_mosaic_aggregate_complete"
path = "api/annunce/create_mosaic_aggregate_complete.rs"

[[example]]
name = "annunce_lock_funds"
path = "api/annunce/lock_funds.rs"

[[example]]
name = "annunce_modify_multisig_account_bonded"
path = "api/annunce/modify_multisig_account_bonded.rs"

[[example]]
name = "annunce_modify_multisig_account_complete"
path = "api/annunce/modify_multisig_account_complete.rs"

[[example]]
name = "annunce_mosaic_alias"
path = "api/annunce/mosaic_alias.rs"

[[example]]
name = "annunce_mosaic_definition"
path = "api/annunce/mosaic_definition.rs"

[[example]]
name = "annunce_mosaic_supply_change"
path = "api/annunce/mosaic_supply_change.rs"

[[example]]
name = "annunce_register_namespace"
path = "api/annunce/register_namespace.rs"

[[example]]
name = "annunce_transfer"
path = "api/annunce/transfer.rs"

[[example]]
name = "websocket"
path = "websocket/main.rs"