[package]
name = "xpx-chain-websocket"
version = "0.1.0"
readme = "README.md"
license = "Apache-2.0"
authors = ["ProxymaX Core Development Team","Eleazar Garrido <eleazartovar123@gmail.com>"]

homepage = "https://www.proximax.io"
repository = "https://github.com/proximax-storage/rust-xpx-chain-sdk"
documentation = "https://github.com/proximax-storage/rust-xpx-chain-sdk/wiki"
keywords = ["blockchain", "sdk", "websocket"]
categories = ["sdk"]
exclude = [ ".gitignore" ]
edition = "2018"

[lib]
name = "xpx_chain_websocket"
crate-type = ["lib"]

[dependencies]
xpx-chain-sdk = { path = "../sdk", version = "^0.1" }

tokio-tungstenite = "*"

tokio = { version = "0.2", default-features = false, features = ["io-util"] }
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }

serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

url = "2.0.0"