[package]
name = "xpx-chain-websocket"
version = "0.1.3"
readme = "README.md"
license = "Apache-2.0"
authors = ["ProxymaX Core Development Team","Eleazar Garrido <eleazartovar123@gmail.com>"]

homepage = "https://www.proximax.io"
repository = "https://github.com/proximax-storage/rust-xpx-chain-sdk"
documentation = "https://github.com/proximax-storage/rust-xpx-chain-sdk/wiki"
keywords = ["blockchain", "sdk", "websocket"]
categories = ["sdk"]
exclude = [ ".gitignore" ]
edition = "2018"

[lib]
name = "xpx_chain_websocket"
crate-type = ["lib"]

[dependencies]
xpx-chain-sdk = { path = "../sdk", version = "^0.1" }
xpx-chain-api = { path = "../api", version = "^0.1" }

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["async-await", "sink", "std"]

[dependencies.tokio]
version = "0.2"
features = ["full"]

[dependencies.tokio-tungstenite]
version = "^0.10"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "^1.0"

[dependencies.url]
version = "2.0"

[dependencies.downcast-rs]
version = "1.1"

[dependencies.bytes]
version = "0.5"

[dependencies.failure]
version = "0.1"