[package]
name = "xpx-chain-apis-examples"
version = "0.1.0"
authors = ["ProxymaX Core Development Team","Eleazar Garrido <eleazartovar123@gmail.com>"]

homepage = "https://www.proximax.io"
repository = "https://github.com/proximax-storage/rust-xpx-chain-sdk/examples/apis"
documentation = "https://github.com/proximax-storage/rust-xpx-chain-sdk/wiki"
keywords = ["blockchain", "sdk", "apis", "example"]
categories = ["examples"]
exclude = [ ".git" ]
edition = "2018"
publish = false

[dependencies]
xpx-chain-sdk = { path = "../../sdk", version = "0.1.0" }
xpx-chain-apis = { path = "../../apis", version = "0.1.0" }

hyper = "0.13"
tokio = { version = "0.2", features = ["macros"] }
