[package]
name = "xpx-chain-crypto-examples"
version = "0.1.0"
authors = ["ProxymaX Core Development Team","Eleazar Garrido <eleazartovar123@gmail.com>"]

homepage = "https://www.proximax.io"
repository = "https://github.com/proximax-storage/rust-xpx-chain-sdk/examples/crypto"
documentation = "https://github.com/proximax-storage/rust-xpx-chain-sdk/wiki"
keywords = ["blockchain", "sdk", "crypto", "example"]
categories = ["examples"]
exclude = [ ".git" ]
edition = "2018"
publish = false

[dependencies]
xpx-chain-crypto = { path = "../../crypto", version = "0.1.3" }